--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,24 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.202.5/containers/
 {
-	"name": "Deno Learning",
+	"name": "Deno HTTP REST Console",
 	"image": "denoland/deno:alpine-1.24.3",
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {
+			// Set *default* container specific settings.json values on container create.
+			"settings": {"deno.enable": true},
+			
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"denoland.vscode-deno"
+			]
+		}
+	},
 	"runArgs": [
         "--env-file=.devcontainer/.env.devcontainer"
     ],
 	"workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
 	"workspaceFolder": "/workspace",
-	"extensions": ["denoland.vscode-deno"],
 	"shutdownAction":"stopContainer"
 }
